# Hat-Research

./: .gitignore  Cargo.toml  README.md
dsl-core/: Cargo.toml
dsl-core/src/: main.rs
dsl-core/src/grammars/: hat.pest
dsl-core/src/integrations/: mod.rs
dsl-core/src/integrations/clock/: mod.rs
dsl-core/src/integrations/dummy/: mod.rs
dsl-core/src/integrations/home_assistant/: command.rs  events.rs  integration.rs  mod.rs
dsl-core/src/runtime/: automation.rs  context.rs  device.rs  event.rs  expression.rs  function.rs  mod.rs  value.rs
dsl-core/src/runtime/actions/: echo.rs  mod.rs
dsl-core/src/runtime/function/: defaults.rs  mod.rs
dsl-core/src/runtime/parser/: expression.rs  mod.rs  operation.rs
dsl-core/src/runtime/value/: mod.rs  operations.rs  time.rs
dsl-core/src/server/: error.rs  mod.rs  transpiler.rs
dsl-core/src/server/routes/: devices.rs  events.rs  mod.rs  update_code.rs
dsl-core/src/server/transpiler/: blocks.rs  mod.rs
dsl-core/src/test/: another.hat  mod.rs  sample.hat
dsl-web/: package-lock.json  package.json
dsl-web/src/: blocks.ts  oldblocks.ts  utils.ts
dsl-web/src/blocks/: actions.ts  automation.ts  colors.ts  conditions.ts  devices.ts  events.ts  index.ts  renderer.ts  toolbox.ts
dsl-web/src/pages/: index.astro  new.astro
dsl-web/src/services/: api.ts
hat/: Cargo.toml
hat-cli/: Cargo.toml
hat-cli/src/: main.rs
hat/benches/: benchmark.rs
hat/src/: lib.rs  main.rs
hat/src/grammars/: hat.pest
hat/src/integrations/: mod.rs
hat/src/integrations/home_assistant/: integration.rs  mod.rs
hat/src/runtime/: automation.rs  context.rs  device.rs  event.rs  mod.rs  schedule.rs  scheduler.rs
hat/src/runtime/function/: defaults.rs  mod.rs
hat/src/runtime/parser/: expression.rs  mod.rs
hat/src/runtime/value/: operations.rs  time.rs
hat/src/server/: mod.rs
hat/src/server/routes/: devices.rs  events.rs  update_code.rs
hat/src/server/transpiler/: mod.rs
hat/src/test/: bench.hat  mod.rs  sample.hat
hatblocks/src/: utils.ts
hatblocks/src/blocks/: automation.ts  events.ts  renderer.ts  toolbox.ts
hatblocks/src/pages/: index.astro
hatblocks/src/services/: api.ts
proto/: Cargo.toml
proto/src/: main.rs
proto/src/grammars/: hat.pest
proto/src/home_assistant/: command.rs  events.rs  (+1 more)
src/: main.rs
src/grammars/: hat.pest
src/runtime/: mod.rs
src/test/: sample.hat
(+8 files in other folders)
