[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures-util = "0.3.30"
pest = "2.7.11"
pest_derive = "2.7.11"
thiserror = "1.0.61"
tokio = { version = "1.39.2", features = ["full"] }
log = { version = "0.4.22", features = [] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"]}
dotenvy = "0.15.7"
async-trait = "0.1.82"
chrono = "0.4.38"
lazy_static = "1.5.0"
