[package]
name = "hat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures-util = "0.3.30"
pest = "2.7.11"
pest_derive = "2.7.11"
thiserror = "1.0.61"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"]}
dotenvy = "0.15.7"
async-trait = "0.1.82"
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.5.0"
url = "2.5.2"
reqwest = { version = "0.12.8", features = ["json"] }
clap = { version = "4.5.20", features = ["derive"] }
axum = { version = "0.7.7", features = ["macros"] }
quick-xml = { version = "0.37.0", features = ["serde", "serialize"] }
tower-http = { version = "0.6.1", features = ["cors"] }
http = "1.1.0"
strum = { version = "0.26.3", features = ["derive"] }
